Some changes related to web pages.

--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/Index.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/Index.razor
@@ -15,8 +15,26 @@
 </div>
 <br />
 <div class="w-50">
-	<p>Este website foi desenvolvido por alunos da Universidade do Minho do curso Licenciatura em Engenharia Informática
-		no âmbito da UC Laboratório de Informática IV no ano letivo 2022/23.</p>
+	<div>
+		<b>Sobre Nós:</b>
+		<p>
+			Desde 1984 que Espinho conta com a sua feira, o que começou como um mercado quinzenal, eventualmente tornou-se semanal graças ao crescimento da população, tornando-se uma das maiores atrações da cidade.
+			A feira de Espinho é conhecida por todo o país sendo uma das maiores feiras nacionais, tendo especial relevância na zona norte do país, em especial na área metropolitana do Porto e no distrito de Aveiro, zonas administrativas às quais a cidade pertence.
+			Entretanto, com a vinda do covid-19, graças ao vírus SARS-CoV-2 o país entrou em pandemia, e as nossas feiras ficaram paradas durante o confinamento, mas o comércio esse não pode voltar a parar, tem de adaptar!
+			E como tal, a autarquia de espinho apresenta a plataforma digital inovadora desenvolvida em parceria com estudantes da Universidade do Minho que permite que todos os cidadãos tenham as nossas feiras na sua casa!
+			Mesmo assim caso pretenda visitar a nossa feira presencialmente, será sempre bem vindo.
+		</p>
+	</div>
+	<div>
+		Para mais informações visite a <a href="https://www.visit.espinho.pt/pt/turismo/mercado-semanal-feira-de-espinho/">página</a> oficial do mercado semanal
+	</div>
+	<br/>
+	<div>
+		Este website foi desenvolvido por alunos da Universidade do Minho do curso Licenciatura em Engenharia Informática
+		no âmbito da UC Laboratório de Informática IV no ano letivo 2022/23.
+	</div>
+</div>
+<div class="bottom_rigth">
 	<p>
 		Autores do projeto:
 		<ul>
@@ -26,9 +44,4 @@
 			<li>© Eduardo Henriques</li>
 		</ul>
 	</p>
-
-</div>
-<br />
-<div>
-	Website de auxilio às feiras de espinho.
 </div>
