--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesFeira/AproveCandidaturaComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesFeira/AproveCandidaturaComponent.razor
@@ -5,6 +5,9 @@
 @using SourceCode;
 @inject SistemaFeiras facade;
 
+
+<PageTitle>Candidaturas</PageTitle>
+
 <div>
 	<h2>Aprovação de candidaturas</h2>
 	@if(erro != 0)
