--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/FormLeilaoComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLeilao/FormLeilaoComponent.razor
@@ -6,6 +6,8 @@
 @using FeirasEspinhoBlazorApp.Pages.PagesFeira;
 @inject SistemaFeiras facade;
 
+<PageTitle>Criar Leilão</PageTitle>
+
 <div>
 	<h2>Formulário Leilão</h2>
 	@if(erro != 0)
