--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesNegociation/ShowVendaComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesNegociation/ShowVendaComponent.razor
@@ -6,6 +6,8 @@
 @using FeirasEspinhoBlazorApp.Pages.PagesNegociation;
 @inject SistemaFeiras facade;
 
+<PageTitle>Venda</PageTitle>
+
 <div>
 	<h2>Venda</h2>
 	<div class="tableFixHead">
