--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesNegociation/ShowVendasComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesNegociation/ShowVendasComponent.razor
@@ -7,6 +7,8 @@
 @using FeirasEspinhoBlazorApp.Pages.PagesFeira;
 @inject SistemaFeiras facade;
 
+<PageTitle>Vendas</PageTitle>
+
 @if(showProds)
 {
 	<ShowVendaComponent idVenda="idVenda" component="this"/>
