--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/FormProdutoComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/FormProdutoComponent.razor
@@ -1,6 +1,9 @@
-﻿@using SourceCode.Stands;
+﻿@page "/formproduto"
+@using SourceCode.Stands;
 @using SourceCode;
 @inject SistemaFeiras facade;
+
+<PageTitle>Criar produto</PageTitle>
 
 <h2>Formulário Produto</h2>
 
