--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/FormStandComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/FormStandComponent.razor
@@ -5,6 +5,8 @@
 @inject NavigationManager navigationManager;
 @inject SistemaFeiras facade;
 
+<PageTitle>Criar Stand</PageTitle>
+
 
 @if(formProduto)
 {
