--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/StartNegociationComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/StartNegociationComponent.razor
@@ -4,6 +4,8 @@
 @using FeirasEspinhoBlazorApp.Pages.PagesNegociation;
 @inject SistemaFeiras facade;
 
+<PageTitle>Negociação</PageTitle>
+
 
 <h2>Negociação</h2>
 <br />
