--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/wwwroot/css/site.css
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/wwwroot/css/site.css
@@ -109,7 +109,7 @@ a, .btn-link {
     margin-bottom: 15px;
     padding: 10px 20px;
     border-radius: 12px;
-    height: 50px;
+    height: 55px;
 }
 
 .sucess {
@@ -244,3 +244,12 @@ tr{
         position: sticky;
         top: 0;
     }
+
+.bottom_rigth {
+    height: 20%;
+    position: absolute;
+    right: 2%;
+    bottom: 0px;
+    font-size: 20px;
+    font-weight: bold;
+}
