--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/Index.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/Index.razor
@@ -26,7 +26,7 @@
 		</p>
 	</div>
 	<div>
-		Para mais informações visite a <a href="https://www.visit.espinho.pt/pt/turismo/mercado-semanal-feira-de-espinho/">página</a> oficial do mercado semanal
+		Para mais informações visite a <a href="https://www.visit.espinho.pt/pt/turismo/mercado-semanal-feira-de-espinho/" target="_blank">página</a> oficial do mercado semanal
 	</div>
 	<br/>
 	<div>
